Ledger buttons now buttons, now divs

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
       height: 50px;
       text-align: center;
       line-height: 50px;
-      cursor: default;
       box-sizing: border-box;
+      border: 0;
+      background-color: transparent;
     }
 
     .letterButton.correct { color: cyan; }
