--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@ main > .puzzle > .letter {
   font-weight: 700;
   font-size: 1rem;
   background-color: transparent;
+  transition: transform 1s ease-out;
+}
+
+main > .puzzle > .letter.revealed {
+  transform: scaleX(-1) rotateY(180deg);
 }
 
 main > .alphabetPanel {
